k8s/istio/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shadowml-vs
  namespace: shadowml
spec:
  hosts:
    - backend-svc
  http:
    - match:
        - uri:
            prefix: /api/v1/ingest
      mirror:
        host: model-v2-svc
        port:
          number: 8002
      mirror_percent: 100
      route:
        - destination:
            host: model-v1-svc
            port:
              number: 8001
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shadowml-dr
  namespace: shadowml
spec:
  host: backend-svc
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 1000
        http2MaxRequests: 1000
    outlierDetection:
      consecutiveErrors: 5
      interval: 30s
      baseEjectionTime: 30s
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
